# MEDCONNECT

medCONNECT/: .dockerignore  .gitignore  BACKEND_STATUS.md  DATABASE_SCHEMA.md  Dockerfile  FIX_EMAIL_CONFIRMATION.md  FIX_PASSWORD_HASH.md  IMPLEMENTATION_COMPLETE.md  MIGRATION_GUIDE.md  QUICKSTART.md  QUICK_FIX.md  QUICK_FIX_PASSWORD_HASH.md  QUICK_MIGRATION.md  README.md  SETUP_ENV.md  SETUP_SUPABASE.md  SUPABASE_SETUP.md  TELANGANA_COLLEGES_ADDED.md  TEMPORARY_FIX_APPLIED.md  apply_migration.py  create_env.ps1  fix_password_hash.py  insert_colleges.py  insert_telangana_colleges.sql  migrate_database.py  migrate_with_sql.py  migration.sql  migration_add_faculty_attendance.sql  migration_add_nmc_and_3d_features.sql  migration_make_password_hash_nullable.sql  pyproject.toml  requirements.txt  run_migration.py  simple_migrate.py  supabase_schema.sql
medCONNECT/app/: __init__.py  main.py
medCONNECT/app/api/: __init__.py
medCONNECT/app/core/: __init__.py  config.py  dependencies.py  exceptions.py  middleware.py  security.py
medCONNECT/app/db/: __init__.py  redis_client.py  supabase.py
medCONNECT/app/models/: __init__.py  academic.py  admin.py  clinical.py  college.py  governance.py  hostel.py  user.py
medCONNECT/app/repositories/: __init__.py  academic_repo.py  admin_repo.py  clinical_repo.py  hostel_repo.py  (+3 more)
medCONNECT/frontend/: 3D_MODELS_GUIDE.md  DASHBOARDS.md  ENDPOINTS_COMPLETE.md  ENDPOINTS_COVERAGE.md  ENDPOINT_AUDIT.md  ENDPOINT_VERIFICATION.md  FRONTEND_SETUP.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
(+62 files in other folders)
